--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,17 +1,20 @@
 # =================== System Setting ===================
+
 set -s escape-time 0
-setw -g mode-keys vi # 开启vi风格后，支持vi的C-d、C-u、hjkl等快捷键
 set -g status-interval 1 # 状态栏刷新时间
 set -g status-justify left # 状态栏列表左对齐
 setw -g monitor-activity on # 非当前窗口有内容更新时在状态栏通知
 setw -g aggressive-resize on
 
+set -g base-index          1      # 窗口编号从 1 开始计数
+set -g display-panes-time  10000  # PREFIX-Q 显示编号的驻留时长，单位 ms
+set -g mouse               off    # 鼠标
+set -g pane-base-index     1      # 窗格编号从 1 开始计数
+set -g renumber-windows    on     # 关掉某个窗口后，编号重排
+setw -g allow-rename       off    # 禁止活动进程修改窗口名
+setw -g automatic-rename   off    # 禁止自动命名新窗口
+setw -g mode-keys          vi     # 进入复制模式的时候使用 vi 键位（默认是 EMACS）
 
-#  Enable terminal compability
-#set -g default-terminal 'xterm-256color'
-#set-option -ga terminal-overrides ",xterm-256color:Tc"
-set -g default-terminal 'xterm-24its'
-set-option -ga terminal-overrides ",xterm-24bits:Tc"
 
 #设置和vim的冲突
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
@@ -26,6 +29,13 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'odedlaz/tmux-onedark-theme'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+# set -g @plugin 'tmux-plugins/tmux-yank'
+
+# tmux-prefix-highlight
+set -g status-right '#{prefix_highlight} #H | %a %Y-%m-%d %H:%M'
+set -g @prefix_highlight_show_copy_mode 'on'
+set -g @prefix_highlight_copy_mode_attr 'fg=white,bg=blue'
 
  # ======================= 快捷键绑定 ========================
 bind-key -r H resize-pane -L 5
@@ -33,29 +43,50 @@ bind-key -r J resize-pane -D 5
 bind-key -r K resize-pane -U 5
 bind-key -r L resize-pane -R 5
 
-bind -n C-h select-pane -L
-bind -n C-j select-pane -D
-bind -n C-k select-pane -U
-bind -n C-l select-pane -R
+
+bind-key k select-pane -U
+bind-key j select-pane -D
+bind-key h select-pane -L
+bind-key l select-pane -R
+
+unbind '"'
+unbind %
+unbind s
 bind v split-window -h
 bind s split-window -v
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 run '~/.tmux/plugins/tpm/tpm' # 初始化插件，应放到最后
 
- # ======================= 快捷键说明 ========================
-# |--------|---------------|
-# | 快捷键 | 功能          |
-# |--------|---------------|
-# | I      | 安装插件      |
-# | U      | 更新插件      |
-# | alt+u  | 清除插件      |
-# | hjkl   | vim式切换窗口 |
-# | HJKL   | vim式调整窗口 |
-# | vs     | vim式创建窗口 |
-# | Space  | 自动调整窗口  |
-# | c      | 创建新端口    |
-# | d      | dettach       |
-# | q      | 切换窗口      |
-# | z      | 最大化窗口    |
-# |--------|---------------|
+# ======================= 快捷键说明 ========================
+# |--------|----------------|
+# | 快捷键 | 功能           |
+# |--------|----------------|
+# | I      | 安装插件       |
+# | U      | 更新插件       |
+# | alt+u  | 清除插件       |
+# | hjkl   | vim式切换窗口  |
+# | HJKL   | vim式调整窗口  |
+# | vs     | vim式创建窗口  |
+# | Space  | 自动调整窗口   |
+# | c      | 创建新端口     |
+# | d      | dettach        |
+# | q      | 切换窗口       |
+# | z      | 最大化窗口     |
+# | r      | 让配置重新生效 |
+# | Ctrl-s | save panes     |
+# | Ctrl-r | restore panes  |
+# |--------|----------------|
+
+
+# 中文乱码需要在bashrc中加入：
+# export LANG="zh_CN.UTF-8"
+# export LC_ALL="zh_CN.UTF-8"
+
+# Enable terminal compability
+# set -g default-terminal 'xterm-256color'
+# set-option -ga terminal-overrides ",xterm-256color:Tc"
+# set -g default-terminal 'xterm-24its'
+# set-option -ga terminal-overrides ",xterm-24bits:Tc"
+
+
