add cmake formatter in ale.

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -15,15 +15,6 @@ setw -g allow-rename       off    # 禁止活动进程修改窗口名
 setw -g automatic-rename   off    # 禁止自动命名新窗口
 setw -g mode-keys          vi     # 进入复制模式的时候使用 vi 键位（默认是 EMACS）
 
-
-#设置和vim的冲突
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
-bind -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
-bind -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-
 # =========================== 插件 ===========================
 # git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 set -g @plugin 'tmux-plugins/tpm'
@@ -56,7 +47,10 @@ bind v split-window -h
 bind s split-window -v
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
+set-option -ga terminal-overrides ",xterm-24bits:Tc"
+
 run '~/.tmux/plugins/tpm/tpm' # 初始化插件，应放到最后
+run '~/.zshrc'
 
 # ======================= 快捷键说明 ========================
 # |--------|----------------|
@@ -86,7 +80,5 @@ run '~/.tmux/plugins/tpm/tpm' # 初始化插件，应放到最后
 # Enable terminal compability
 # set -g default-terminal 'xterm-256color'
 # set-option -ga terminal-overrides ",xterm-256color:Tc"
-# set -g default-terminal 'xterm-24its'
-# set-option -ga terminal-overrides ",xterm-24bits:Tc"
 
 
