--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,25 +1,43 @@
 {
+  "suggest.triggerAfterInsertEnter": true,
+  "suggest.timeout": 500,
+  "suggest.noselect": false,
+  "suggest.acceptSuggestionOnCommitCharacter": true,
+  "suggest.detailField": "abbr",
+  "suggest.triggerCompletionWait": 100,
+  "suggest.echodocSupport": true,
+  "suggest.enablePreview": false,
+  "suggest.preferCompleteThanJumpPlaceholder": true,
+  "suggest.snippetIndicator": "~",
+  "coc.preferences.formatOnType": false,
+  "diagnostic.infoSign": "✗",
+  "diagnostic.hintSign": "H>>",
+  "diagnostic.warningSign": "⚡",
+  "diagnostic.level": "99999",
+  "pairs.disableLanguages": ["python"],
+  "pairs.enableCharacters": ["(", "[", "{", "'", "\"", "`","<"],
 
-    "suggest.triggerAfterInsertEnter": true,
-    "suggest.timeout": 500,
-    "suggest.noselect": false,
-    "suggest.detailField":"abbr",
-    "suggest.triggerCompletionWait": 100,
-    "suggest.echodocSupport": true,
-    "coc.preferences.formatOnType": true,
-    "suggest.enablePreview":false,
-    "suggest.preferCompleteThanJumpPlaceholder": true,
+  // coc-yank
+  "yank.highlight.enable": true,
+  "yank.highlight.duration": 500,
+  "yank.list.maxsize": 200,
 
-    //python
-    "python.linting.enabled": true,
-    "python.linting.lintOnSave": true,
+  //python
+  "python.linting.enabled": true,
+  "python.linting.lintOnSave": true,
 
-    "languageserver": {
-        "clangd": {
-            "command": "clangd",
-            "rootPatterns": ["compile_flags.txt", "compile_commands.json", ".vim/", ".git/", ".hg/"],
-            "filetypes": ["c", "cpp", "objc", "objcpp"]
-        }
-    },
-    "java.errors.incompleteClasspath.severity": "ignore"
+  "languageserver": {
+    "clangd": {
+      "command": "clangd",
+      "rootPatterns": [
+        "compile_flags.txt",
+        "compile_commands.json",
+        ".vim/",
+        ".git/",
+        ".hg/"
+      ],
+      "filetypes": ["c", "cpp", "objc", "objcpp"]
+    }
+  },
+  "java.errors.incompleteClasspath.severity": "ignore"
 }
