--- a/nvim_dein/config/deindefault.toml
+++ b/nvim_dein/config/deindefault.toml
@@ -1,83 +1,80 @@
 [[plugins]]
 repo = 'Shougo/dein.vim'
 
-
 [[plugins]]
-repo = 'neoclide/coc.nvim'
+repo = 'neoclide/coc.nvim'        # 代码补全
 build = './install.sh nightly'
 hook_add = 'source ~/.config/nvim/config/coc.vim'
 
-# curl --fail -L https://install-node.now.sh/latest | sh " install nodejs >=8.0
-# curl --compressed -o- -L https://yarnpkg.com/install.sh | bash " Install yarn
-# :CocInstall coc-python
-# :CocInstall coc-tsserver
-# :CocInstall coc-java
-# :CocInstall coc-yaml
-# :CocInstall coc-ultisnips
-# :CocInstall coc-yank
-# :CocInstall coc-pairs
-# :CocInstall coc-emmet
-# :CocInstall coc-html
-# :CocInstall coc-css
-# :CocInstall coc-json
-# :CocInstall coc-vimlsp
-# :CocInstall coc-imselect # 输入法切换,内容为中文时，会自动切换，按esc后自动切换成英文
-
-
 [[plugins]]
-repo = 'SirVer/ultisnips'          # 代码补全
+repo = 'SirVer/ultisnips'         # 自动生成代码
 hook_add = 'source ~/.config/nvim/config/ultisnips.vim'
 
 [[plugins]]
-repo = 'liuchengxu/vim-which-key'
+repo = 'liuchengxu/vim-which-key' # 快捷键导航
 hook_add = 'source ~/.config/nvim/config/vim-which-key.vim'
 
 # ======================= 主题美化类 ========================
-
 [[plugins]]
-repo = 'mhinz/vim-startify'
+repo = 'mhinz/vim-startify'             # 启动画面
 depends = 'vim-devicons'
 hook_add = 'source ~/.config/nvim/config/vim-startify.vim'
 
+
 [[plugins]]
-repo = 'vim-airline/vim-airline'
+repo = 'vim-airline/vim-airline'        # 状态栏
 hook_add = 'source ~/.config/nvim/config/vim-airline.vim'
 
+
 [[plugins]]
-repo = 'vim-airline/vim-airline-themes'
+repo = 'vim-airline/vim-airline-themes' # 状态栏主题
 depends = 'vim-airline/vim-airline'
 
-[[plugins]]
-repo = 'ryanoasis/vim-devicons'                    # 需要安装 https://github.com/ryanoasis/nerd-fonts#option-3-install-script
 
-[[plugins]] # 进度滚动条
+[[plugins]]
+repo = 'ryanoasis/vim-devicons'         # 需要安装 https://github.com/ryanoasis/nerd-fonts#option-3-install-script
+
+
+[[plugins]]                             # 进度滚动条
 repo = 'gcavallanti/vim-noscrollbar'
+depends = 'vim-airline/vim-airline'
+
+
+# ======================= 各种主题 ========================
+[[plugins]]
+repo = 'drewtempelmeyer/palenight.vim'    
+hook_add = 'let g:palenight_terminal_italics=1'
 
 
 [[plugins]]
-repo = 'drewtempelmeyer/palenight.vim'    # Load by Default
-hook_add = '''
-    colorscheme palenight
-    " let g:palenight_terminal_italics=1
-
-    function! Custom_Theme_Strengthen() " 加强cursorline对比度
-        if g:colors_name == 'palenight'
-                augroup Strengthen
-                    autocmd InsertLeave * highlight CursorLine guibg=#2f3843
-                    autocmd InsertEnter * highlight CursorLine guibg=#2b323b
-                augroup END
-        else
-            autocmd! Strengthen
-        endif
-
-        highlight Folded guifg=lightblue
-    endfunction
-
-    call Custom_Theme_Strengthen()
-
-    autocmd ColorScheme * call Custom_Theme_Strengthen()
-    '''
+repo = 'kristijanhusak/vim-hybrid-material'       
 
 
+[[plugins]]
+repo = 'morhetz/gruvbox'                          
+hook_source ='let g:gruvbox_italic=1'
 
 
+[[plugins]]
+repo = 'ayu-theme/ayu-vim'                        
+
+
+[[plugins]]
+repo = 'arcticicestudio/nord-vim'                 
+hook_source = '''
+    let g:nord_italic = 1
+    let g:nord_underline = 1
+    let g:nord_italic_comments = 1
+    let g:nord_comment_brightness = 12
+'''
+
+
+[[plugins]]
+repo = 'rakr/vim-one'                             
+hook_source = '''
+    let g:one_allow_italics = 1 " I love italic for comments
+'''
+
+
+[[plugins]]
+repo = 'mhartington/oceanic-next'                 
