--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -47,6 +47,9 @@ bind v split-window -h
 bind s split-window -v
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
+#set -g default-terminal screen-256color
+#set-option -ga terminal-overrides ",*256col*:Tc" # 这句是关键
+
 set-option -ga terminal-overrides ",xterm-24bits:Tc"
 
 run '~/.tmux/plugins/tpm/tpm' # 初始化插件，应放到最后
